@@ -6,6 +6,7 @@ Released ????? ??, ????
 - Drop support for EOL Python 3.6 #328 (hugovk, dr-p)
 - Support for Malta #612, #630 (rafelbev)
 - Australia fixes #631 (jeremychrimes)
+- Ireland fixes #639 (TeoTN, dr-p, javicalle)
 
 
 Version 0.13
